# aoc2022

./: .inverses.py.swp  README.md  cam.py  dd  inverses.py  justfile
lib/: lib.ml
test/: dune
test/day01.t/: dune  run.t
test/day02.t/: dune  run.t
test/day03.t/: dune  run.t
test/day04.t/: run.t
test/day05.t/: run.t
test/day06.t/: run.t
test/day07.t/: run.t
test/day08.t/: run.t
test/day09.t/: run.t
test/day10.t/: run.t
test/day11.t/: run.t
test/day12.t/: run.t
test/day13.t/: run.t
test/day14.t/: run.t
test/day16.t/: run.t
test/day17.t/: run.t
test/day18.t/: run.t
test/day19.t/: run.t
test/day20.t/: run.t
test/day21.t/: run.t
test/day22.t/: run.t
test/day23.t/: run.t
test/day24.t/: run.t
test/day25.t/: run.t
